--- a/Client/views/accueil.jade
+++ b/Client/views/accueil.jade
@@ -2,9 +2,9 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(http-equiv='x-ua-compatible', content='ie=edge')
-    title Election Cameroun 2.0
+    //meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    //meta(http-equiv='x-ua-compatible', content='ie=edge')
+    title Election Cameroun
     script(type='text/javascript', src='js/jquery-3.3.1.min.js')
     script(type='text/javascript', src='js/accueil.js')
     // Bootstrap tooltips
