--- a/Client/views/levelCandidat.jade
+++ b/Client/views/levelCandidat.jade
@@ -1,6 +1,6 @@
 html
   head
-    title My first chart using FusionCharts Suite XT
+    title Resultats par candidats
     link(href='css/bootstrap.min.css', rel='stylesheet')
     link(href='css/visualisation.css', rel='stylesheet')
 
@@ -9,9 +9,11 @@ html
     script(type='text/javascript', src='js/levelCandidat.js')
 
     // Include fusioncharts core library
-    script(type='text/javascript', src='js/fusioncharts.js')
+    //script(type='text/javascript', src='js/fusioncharts.js')
+    script(type='text/javascript', src='https://unpkg.com/fusioncharts/fusioncharts.js')
     // Include fusion theme
-    script(type='text/javascript', src='js/themes/fusioncharts.theme.fusion.js')
+    //script(type='text/javascript', src='js/themes/fusioncharts.theme.fusion.js')
+    script(type='text/javascript', src='https://unpkg.com/fusioncharts/themes/fusioncharts.theme.fusion.js')
   body
     #loaderImage(style='display:none;')
       img(src='img/ajax-loader.gif', alt='Loader')
