--- a/Client/views/verification.jade
+++ b/Client/views/verification.jade
@@ -1,6 +1,6 @@
 html
   head
-    title My first chart using FusionCharts Suite XT
+    title Verification des resultats
     link(href='css/bootstrap.min.css', rel='stylesheet')
     link(href='css/visualisation.css', rel='stylesheet')
     script(type='text/javascript', src='js/jquery-3.3.1.min.js')
@@ -8,9 +8,11 @@ html
     script(type='text/javascript', src='js/verification.js')
 
     // Include fusioncharts core library
-    script(type='text/javascript', src='js/fusioncharts.js')
+    //script(type='text/javascript', src='js/fusioncharts.js')
+    script(type='text/javascript', src='https://unpkg.com/fusioncharts/fusioncharts.js')
     // Include fusion theme
-    script(type='text/javascript', src='js/themes/fusioncharts.theme.fusion.js')
+    //script(type='text/javascript', src='js/themes/fusioncharts.theme.fusion.js')
+    script(type='text/javascript', src='https://unpkg.com/fusioncharts/themes/fusioncharts.theme.fusion.js')
   body
     #loaderImage(style='display:none;')
       img(src='img/ajax-loader.gif', alt='Loader')
