add library online

--- a/Client/views/verification.jade
+++ b/Client/views/verification.jade
@@ -3,8 +3,8 @@ html
     title Verification des resultats
     link(href='css/bootstrap.min.css', rel='stylesheet')
     link(href='css/visualisation.css', rel='stylesheet')
-    script(type='text/javascript', src='js/jquery-3.3.1.min.js')
-    script(type='text/javascript', src='js/bootstrap.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
+    script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(type='text/javascript', src='js/verification.js')
 
     // Include fusioncharts core library
