--- a/Client/views/accueil.jade
+++ b/Client/views/accueil.jade
@@ -5,22 +5,21 @@ html(lang='en')
     //meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     //meta(http-equiv='x-ua-compatible', content='ie=edge')
     title Election Cameroun
-    script(type='text/javascript', src='js/jquery-3.3.1.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
     script(type='text/javascript', src='js/accueil.js')
     // Bootstrap tooltips
-    script(type='text/javascript', src='mdbpro/popper.min.js')
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/popper.min.js')
     // Bootstrap core JavaScript
-    script(type='text/javascript', src='js/bootstrap.min.js')
+    script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     // MDB core JavaScript
-    script(type='text/javascript', src='mdbpro/compiled.min.js')
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/excel-builder/2.0.3/excel-builder.compiled.min.js')
     // Font Awesome
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.6.1/css/all.css')
     link(rel="stylesheet", href='css/loading.css')
     // Bootstrap core CSS
     link(href='css/bootstrap.min.css', rel='stylesheet')
     // Material Design Bootstrap
-    // <link href="css/mdb.min.css" rel="stylesheet">
-    link(href='mdbpro/mdbpro.css', rel='stylesheet')
+    link(href='ttps://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.0/css/mdb.min.css', rel='stylesheet')
     // Your custom styles (optional)
     link(href='css/style.css', rel='stylesheet')
   body(style='')
