--- a/Client/views/levelVotePlace.jade
+++ b/Client/views/levelVotePlace.jade
@@ -4,8 +4,8 @@ html
     link(href='css/bootstrap.min.css', rel='stylesheet')
     link(href='css/visualisation.css', rel='stylesheet')
     link(rel="stylesheet", href='css/loading.css')
-    script(type='text/javascript', src='js/jquery-3.3.1.min.js')
-    script(type='text/javascript', src='js/bootstrap.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
+    script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(type='text/javascript', src='js/levelVotePlace.js')
 
     // Include fusioncharts core library
